--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Elaborado por "Hugo Enrique Calderon"</p>
                     <ul class="icons">
                         <li class="icon">
-                            <a href="https://github.com/hecalderong" target="_blank">
+                            <a href="https://hecalderong.github.io/hecalderong/" target="_blank">
                                 <i class="fa-brands fa-github"></i>
                             </a>
                         </li>
